[project]
name = "langgraph-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "fastapi>=0.116.1",
    "flax>=0.11.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "langgraph-cli[inmem]>=0.3.6",
    "langsmith>=0.4.9",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
    "tavily-python>=0.7.10",
    "torch>=2.7.1",
    "wikipedia>=1.4.0",
]
